--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
             font-size: 1.1em;
             padding: 12px 20px;
             display: flex;
-            justify-content: space-between; /* Changed to space-between */
+            justify-content: space-between; 
             position: relative;
-            padding-right: 70px; /* Added right padding for the count */
+            padding-right: 70px; 
             background: #1f4068;
             color: #fff;
             border: none;
@@ -260,8 +260,8 @@
         }
 
         .question-count {
-            position: absolute; /* Added absolute positioning */
-            right: 20px; /* Set right position */
+            position: absolute; 
+            right: 20px; 
             color: #4ecca3;
             font-size: 0.9em;
             opacity: 0.9;
@@ -269,7 +269,7 @@
         }
 
         .menu-btn.selected .question-count {
-            color: #16213e; /* Updated selected state for question count */
+            color: #16213e; 
         }
 
         .theme-select {
